# StatsEngine

./: README.md  main.py  pyproject.toml  requirements.txt
charts/: results.txt
core/: base_template.py  router.py
mcp_server/: readme.md  requirements-mcp.txt  server.py
templates/: __init__.py  registry.py
templates/CIs/: confidence_interval_mean.py  confidence_interval_proportion.py
templates/descriptive/: summary_statistics.py  z_score.py
templates/distributions/: binomial.py  continuous.py  geometric.py  hypergeometric.py  normal.py  poisson.py
templates/finance/: expected_value.py  gamblers_ruin.py  risk.py
templates/gaming/: cards.py  coin_flip.py  dice.py  roulette.py
templates/hypothesis_testing/: chi_square_goodness_of_fit.py  one_sample_t_test.py  one_sample_z_test.py  two_sample_t_test.py
templates/variables_relationships/: pearson_correlation.py  simple_linear_regression.py
tests/: fixtures.py  test_all_templates.py  test_correctness.py
